--- a/apps.yml
+++ b/apps.yml
@@ -1,8 +1,6 @@
 ---
 - hosts: all
-
   tasks:
-
     - name: install applications via homebrew cask
       homebrew_cask: name={{ item }} state=present
       with_items:
@@ -12,7 +10,7 @@
         - flux
         - netbeans
         - handbrake
-        # - mysqlworkbench
+        - mysqlworkbench
         - the-unarchiver
         - virtualbox
         - vagrant
@@ -28,3 +26,8 @@
         - packer
       environment:
         HOMEBREW_CASK_OPTS: --appdir=/Applications
+
+    - name: install brew applications
+      homebrew: name={{ item }} state=present
+      with_items:
+        - pv
